--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             {% for my_page in sorted_pages %}
               {% if my_page.title %}
               <li class="inline-block block-lg text-right ml-1 ml-lg-0">
-                <a class="italic no-underline h3 font-smoothing" href="{{ site.baseurl}}{{ my_page.url }}">{{ my_page.title }}</a>
+                <a class="italic no-underline h3 font-smoothing" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
               </li>
               {% endif %}
             {% endfor %}
